[package]
name = "ikemen_steam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
libloading = "0.8.1"
steamworks = "0.10.0"
tonic = "0.10.2"
prost = "0.12.3"
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"] }
bytes = "1.5.0"

[[bin]]
name = "grpc"
path = "src/grpc/bin/main.rs"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.3"